--- a/package.json
+++ b/package.json
@@ -20,14 +20,22 @@
     ]
   },
   "dependencies": {
+    "bricks.js": "^1.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "web-vitals": "^3.5.0"
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-infinite-scroller": "^1.2.6",
+    "react-infinite-viewer": "^0.28.1",
+    "react-responsive-masonry": "^2.1.7",
+    "svelte-masonry-layout": "^0.0.7"
   },
   "devDependencies": {
+    "@types/bricks.js": "^1.8.5",
     "@types/node": "^20.9.3",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.16",
+    "@types/react-infinite-scroller": "^1.2.5",
+    "@types/react-responsive-masonry": "^2.1.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5"
   }
